- fixed a few mistakes;

--- a/2023/Scribe/2023-03-07/spring2023-lecture-7.tex
+++ b/2023/Scribe/2023-03-07/spring2023-lecture-7.tex
@@ -129,7 +129,7 @@ There are various levels from abstraction, from high level programming languages
 \newline
 The minimum for an assembly language to be Turing complete is simple; any assembly language capable of: \texttt{read, store, if \$1==0 -> goto \$2} are Turing complete. Being Turing complete however is not an indicator of a good assembly language, as this example would only allow us to perform operations on data 1-bit at a time. There are some trade-offs that must be considered when designing an ISA such as the abstraction level, the number of instructions, and the complexity of decoding.\\
 \newline
-Many companies, especially Intel, started added an abundance of instructions into the ISA hoping for better performance, support of more programming languages, and easier compilation of programs. In the '70s and '80s, many specialized CPUs were created. These CPUs would be entirely single purpose (like embedded systems) and would have ISAs that only supported certain applications, like database operations, running JVM, and even one that only ran LISP instructions (called the \href{https://en.wikipedia.org/wiki/Lisp_machine}{LISP-machine}). This belief that dedicated hardware circuits would always outperform software is true for the most part. Take for example implementing the square-root function. The \href{https://en.wikipedia.org/wiki/Newton\%27s_method}{Newton-Raphson} algorithm takes \texttt{log(n)} operations as it makes a guess, averages the guess with the quotient and "guesses" again, performing a sort of binary search. This is a lot of instructions as this will run recursively. In hardware, much of the overhead of executing an instruction like this could be removed as there's no fetch, decode, or execute cycles; you would just pass the circuit the operand and get the answer. However, dedicated circuits take up space on the silicon. This was however not a problem at the time as Moore's law was in full effect, giving computer architects double the chip space to work with every year or so.\\
+Many companies, especially Intel, started added an abundance of instructions into the ISA hoping for better performance, support of more programming languages, and easier compilation of programs. In the '70s and '80s, many specialized CPUs were created. These CPUs would be entirely single purpose (like embedded systems) and would have ISAs that only supported certain applications, like database operations, running JVM, and even one that only ran LISP instructions (called the \href{https://en.wikipedia.org/wiki/Lisp_machine}{LISP-machine}). This belief that dedicated hardware circuits would always outperform software is true for the most part. Take for example implementing the square-root function. The \href{https://en.wikipedia.org/wiki/Newton\%27s_method}{Newton-Raphson} algorithm takes $\log n$ operations as it makes a guess, averages the guess with the quotient and "guesses" again, performing a sort of binary search. This is a lot of instructions as this will run recursively. In hardware, much of the overhead of executing an instruction like this could be removed as there's no fetch, decode, or execute cycles; you would just pass the circuit the operand and get the answer. However, dedicated circuits take up space on the silicon. This was, however, not a big concern at the time as Moore's law still held.\\
 \newline
 With high level programming languages, there are often a lot of small things that are abstracted away to make programming easier. In C++, if we have for example a class variable (e.g. \texttt{vector<int>}) and call a function of the class (\texttt{vector.push\_back()}), the address of the instructions to execute this function are stored in a virtual dispatch table (\href{https://pabloariasal.github.io/2017/06/10/understanding-virtual-tables/}{vtable}). There is a table for every class so we need to check the class "tag" of the variable to find it's vtable. So for every class function call, there is quite a bit of extra work that must be done.\\
 \subsection{Complex Instruction Set Computer (CISC)}
@@ -143,7 +143,7 @@ RISC's ISA offers a more limited instruction set as well as uniform instruction 
 \newline
 John L Hennessy and David A Patterson, the author of \textit{The Case for the Reduced Instruction Set Computer} (and later both authors of \textit{Computer Architecture: A Quantitative Approach}) banked on RISC being the future of computer architecture. Hennessy and Patterson both lead a group of companies (MIPS Computer and Sun Microsystems respectively) to work on the development of a RISC processor. Sun Microsystems today is a part of Oracle.\\
 \subsection{Intel Chips}
-It is doubtful that today, there are actually any "pure" CISC architectures left (n.b. CISC and RISC have no formal definition). Intel's chips claim to be based on a CISC architecture, however there is a RISC core on chip. The x86 ISA has an on-chip compiler which compiles instructions into microcode (a.k.a. $\mu$-code, between assembly and machine code), which is then turned into RISC instructions and fed to the RISC core. There are however still non-RISC instructions as part of the ISA (Since Intel almost never removes an instruction once it has been added) and other processing units to execute the non-RISC instructions. These other processing units are marketed to us as accelerators (e.g. NPU). Other units now included with Intel chips include a true RNG (based on quantum states) and support for cryptocurrency operations.\\
+It is doubtful that today, there are actually any "pure" CISC architectures left (n.b. CISC and RISC have no formal definition). Intel's chips claim to be based on a CISC architecture, however there is a RISC core on chip. They translate x86 instructions to microinstructions (a lower-level instruction set) before execution by its RISC-like core. There are however still non-RISC instructions as part of the ISA (Since Intel almost never removes an instruction once it has been added) and other processing units to execute the non-RISC instructions. These other processing units are marketed to us as accelerators (e.g. NPU). Other units now included with Intel chips include a true RNG (based on quantum states) and support for cryptocurrency operations.\\
 \newline
 The Intel 8088 ISA had hardware support for integers and performed floating point operations in software; floating point instructions were prefixed with an 'F'. IBM designed a computer with two CPU slots, one for the Intel 8088 and the other for the Intel 8087. The 8087 was just a floating point unit and any floating point instruction would be sent from the 8088 to the 8087, which would then return the result back to the 8088. Eventually, these became unified into a single chip.\\
 \newline
