--- a/2023/Scribe/2023-02-21/main.tex
+++ b/2023/Scribe/2023-02-21/main.tex
@@ -112,25 +112,27 @@
 %\lecture{**LECTURE-NUMBER**}{**DATE**}{**LECTURER**}{**SCRIBE**}
 \lecture{4}{Feb 21}{Emery Berger}{Fadhil I. Kurnia}
 
-In this lecture, we are discussing the features and mistakes of LISP, also Garbage Collection (GC).
+In this lecture, we are discuss the features and mistakes of LISP, and also Garbage Collection (GC).
 
 \section{LISP Programming Language}
-One of the main goals of LISP development is to easily program lambda calculus, which is a totally different goal than what FORTRAN and COBOL have. Lambda calculus is a powerful way to express functions where we have both function and scope; Lambda is function + environment. Commonly people also referring lambda as closures. Developed with that that lambda calculus under consideration, LISP was specifically designed to represent Symbolic Artificial Intelligence (AI) code such as logic, lists, structures, and function over them. Some of the LISP's features and their bad consequences are described below.
+One of the main goals of LISP development is to easily program lambda calculus, which is a totally different goal than what FORTRAN and COBOL have. Lambda calculus is a powerful way to express functions where we have both function and scope;
+A lambda function is an anonymous (unnamed) function. It is typically an expression based on its parameters, but it may also use variables from its environment. A lambda function together with that environment is called a \textit{closure}.
+Developed with that that lambda calculus in mind, LISP was specifically designed to represent symbolic Artificial Intelligence (AI) code such as logic, lists, structures, and function over them. Some of the LISP's features and their bad consequences are described below.
 
 \subsection{Key Features of LISP}
 
 \textbf{Recursion.} Recursion is a unique feature LISP offers compared to other programming languages at the same era. This enables execution with divide and conquer approach.
 
-\textbf{Functional Language. } LISP is among the first functional language. The term "functional language" itself has a broad meaning. Commonly it refers to function-oriented language where function returns value. A function excludes or limits global state or mutation; commonly referred as "pure" function since it prevents any side effects. However, pure function commonly require a lot of value copying.
+\textbf{Functional Language. } LISP is among the first functional languages. The term "functional language" itself has a broad meaning. Commonly it refers to function-oriented programming where functions return values. A function excludes or limits global state or mutation; commonly referred as "pure" function since it prevents any side effects. However, pure functions commonly require a lot of value copying.
 
-\textbf{Interpreted Language. } The \verb|eval| in LISP which takes string and runs it makes LISP as an interpreted language. LISP treats program as data, for example: \verb|‘(CAR (CDR ‘(1 2 3)’))’|. This is a powerful concept for bootstrapping where we write a programming language with itself. We only need to implement a small core and implement the rest of the language with that implementation. However, this also makes the code hard to compile in advance; making LISP as an inefficient language, both in space and time aspects.
+\textbf{Interpreted Language. } The \verb|eval| statement takes a string and executes it, making LISP an interpreted language. LISP treats program as data, for example: \verb|‘(CAR (CDR ‘(1 2 3)’))’|. This is a powerful concept for bootstrapping a programming language, where we implement a programming language with itself. We only need to implement a small core, which we then use to implement the rest of the language. However, this also makes the code hard to compile in advance; making LISP as an inefficient language, both in space and time aspects.
 
 \textbf{Garbage Collected. } LISP has an automatic garbage collection process using reference counting method. However, reference-counting is considered inefficient since there are many cascading operations involved. This was explained in the previous lecture. 
 
-\textbf{Dynamic Types. } LISP has dynamic types, for example a list in LISP can have multiple elements with different types. Dynamic type requires the language to pair value with its type ("boxed" variable). Another language with dynamic type is JavaScript, as shown in the example below.
+\textbf{Dynamic Types. } LISP has dynamic types, for example a list in LISP can have multiple elements with different types. Dynamic typing requires the language to pair values with its type ("boxing" variables, i.e., treating even primitive values as objects). Another language with dynamic type is JavaScript, as shown in the example below.
 
 \begin{verbatim}
-  let x;    // a "boxed" variable, it needs to have both the type and value [TYPE | VALUE]
+  let x;    // a "boxed" variable, with internal fields indicating type and value
   x = 31;   // now the variable contains an integer {<int>: 34}
 \end{verbatim}
 
@@ -138,31 +140,31 @@ One of the main goals of LISP development is to easily program lambda calculus, 
 \textbf{Starting Point for Async. } A variant of LISP developed in MIT also introduces the concept of \verb|future| for concurrent execution. That is similar as async/await. See the code below for an example.
 
 \begin{verbatim}
-    Let x = future fib(1000);   // run fib in another thread
+    let x = future fib(1000);   // run fib in another thread
     ...
-    Let q = awat x + 12;        // if x is not present yet, then wait (blocking)
+    let q = await x + 12;       // if x is not ready yet, then wait (blocking)
 \end{verbatim}
 
 \subsection{Mistakes in LISP}
 
 \textbf{Inefficient Value Copying.} 
-A pure function, as in LISP, which handle everything in its scope and need to return new value usually require copying value. That value copying is inefficient compared to updating the value in-place. Consider a function that has list as the parameter and return a list with new element in the end, as shown by the input and output example below.
+Pure functions usually require copying values. That copying is inefficient compared to updating them in place. Consider a function that has takes a list as a parameter and returns a list with a new element in the end, as shown in the example below.
 
 \begin{verbatim}
     Input: ( 1 2 ... 1000000 )
     Output: ( 1 2 ... 1000000 1000001 )
 \end{verbatim}
 
-In a pure function, we need to copy the input list into a new variable with larger size, add a new element in the end, then returning it. Also, consider another function that need to remove the first element as shown in the input-output example below. Similarly, the function need to allocate a new list and copy almost all of the element from the input list.
+In a pure function, we need to copy the input list into a new variable with larger size, add a new element in the end, then return it. Also, consider another function that removes the first element as shown in the example below. Similarly, the function need to allocate a new list and copy almost all of the elements from the input list.
 
 \begin{verbatim}
     Input: ( 1 2 ... 1000000 )
     Output: ( 2 3 ... 1000000 )
 \end{verbatim}
 
-A more efficient mechanism would do the operation constantly by arranging the pointer, either at the head or the tail of the list. This inefficiency in LISP makes the O(1) operation into O(n), therefore people perceive LISP as a slow language.
+A more efficient mechanism would do the operation in constant time by moving the pointer, either at the head or the tail of the list. This inefficiency in LISP makes the O(1) operation into O(n), therefore people perceive LISP as a slow language.
 
-\textbf{Evil Eval. } The introduction of \verb|eval| in LISP make teh code hard to be compiled in advance, it could produce runtime-error which can only be known during execution. An example of this is a typo in a method invocation as shown below. This happens a lot in Objective-C which is extensively used in iOS; you can try to see your phone log to check this. Because of this, some people prefer compiled language than interpreted one.
+\textbf{Evil Eval. } The introduction of \verb|eval| in LISP makes it hard to compile the code in advance, as it could produce runtime errors, i.e., errors only known during execution. An example of this is a typo in a method invocation as shown below. This happens a lot in Objective-C which is extensively used in iOS; you can see those in any iPhone's log. Because of this, some people prefer compiled languages.
 \begin{verbatim}
     void doSomething() {
        ....
@@ -171,7 +173,7 @@ A more efficient mechanism would do the operation constantly by arranging the po
     x->doSomethang(); // results in runtime error: method not found
 \end{verbatim}
 
-Another example is when there is an undefined variable encountered as shown below.
+Another example is when there is an undefined variable, as shown below.
 \begin{verbatim}
     void foo() {
         let q;
@@ -180,16 +182,16 @@ Another example is when there is an undefined variable encountered as shown belo
     }
 \end{verbatim}
 
-\textbf{Accidentally Dynamically Scoped. } Other than having dynamic typing, LISP is accidentally dynamically scoped. Dynamic scope makes the code hard to read and reason about. The creator of LISP did not intend that and try to create a lexically scoped version of LISP which they called as COMMON LISP.
+\textbf{Accidentally Dynamically Scoped. } Besides being dynamically typed, LISP is also accidentally dynamically scoped. Dynamic scope makes the code hard to read and reason about. The creator of LISP did not intend that and tried to correct it with a lexically scoped version named COMMON LISP.
 
 Scope is about name resolution in the code. Example of scoping is shown below.
 \begin{verbatim}
     ( ... int a;     // first variable called a
        ( ... int a;  // another variable called a
-           a         // the variable a here refer to the second a
+           a         // the variable a here refers to the second a
 \end{verbatim}
 
-A dynamically scoped language execute the code based on the scope of the caller. As an example, see the code below.
+A dynamically scoped language executes the code based on the scope of the caller. As an example, see the code below.
 \begin{verbatim}
     int Foo() {
         return x + 2;   // x is not defined in the function
@@ -199,35 +201,37 @@ A dynamically scoped language execute the code based on the scope of the caller.
     q = Foo();          // this Foo() invocation uses x=12
 \end{verbatim}
 
-While in a lexically scoped language, every variable need to be defined in the same scope where the variable is used. This make a small part of the code easy to read and reason about without having to check another part of the code. As an example, the same \verb|Foo()| function above will not be compiled since \verb|x| is undefined in the function's scope.
+In a lexically scoped language, every variable needs to be known in the scope where the variable is used. This makes a small part of the code easy to read and reason about without having to check another part of the code. As an example, the same \verb|Foo()| function above would not compile since \verb|x| is undefined in the function's scope.
 \begin{verbatim}
     int Foo() {
         return x + 2;   // x is not defined, error during compilation
     }
 \end{verbatim}
 
-Other than LISP, another dynamically scoped language is \verb|var| in JavaScript. Similar as LISP that finally make a lexically scoped language with COMMON LISP, JavaScript offers lexically scoped variable when the variable is written with \verb|let|, instead of \verb|var|.
+Another example of dynamic scope is \verb|var| in JavaScript. Just like COMMON LISP was introduced to as a lexically scoped version of othe original LISP, JavaScript supports lexically scoped variables when these are declared with the \verb|let| keyword (rather than \verb|var|).
 
-\textbf{Inefficient Garbage Collection. } The reference-counting method used in LISP has poor performance. For example, in \verb|emacs|, a workplace written in LISP regularly will pause for seconds to do garbage collection, this is known as "stop the world". Because of this, some people see GC as a bad thing and should be avoided. After LISP, the next popular language with GC is Java, it was introduced in the 80s, 20-30 years after LISP. Many advance mechanisms for efficient GC were developed, for example as in Java and JavaScript.
+\textbf{Inefficient Garbage Collection. } The reference-counting method used in LISP has poor performance. For example, \verb|emacs|, an editor built on LISP, regularly will pause for seconds to do garbage collection. This is known as "stopping the world". Because of this, some people see GC as a bad thing that should be avoided. After LISP, the next popular language with GC is Java, it was introduced in the 80s, 20-30 years after LISP. Many advanced mechanisms for efficient GC were developed, for example as in Java and JavaScript.
 
-\subsection{Why People Repeating the Same Mistakes?}
+\subsection{Why do People Repeat the Same Mistakes?}
 
-There are many lessons learned from the previous mistakes, such as preferring compiled language over interpreted one, avoiding reference-counting for GC. Despite that, people still repat the same mistakes for other programming languages. Some examples:
+Despite the lessons taught by previous mistakes, people still repeat these in later programming languages. Some examples:
 \begin{itemize}
-    \item Facebook uses PHP (an interpreted language) before developing Hack (a language with static type).
+    \item Facebook used PHP (an interpreted language) before developing Hack (a language with static type).
     \item Twitter uses Ruby (an interpreted languge with dynamic type) with Ruby on Rails framework.
-    \item Apple initially uses Objective-C, an interpreted language which has virtual methods that can surface “method not found” error. Then, Apple replace that with Swift. However, both Objective-C and Swift use reference-counting method for GC.
-    \item Java was initially interpreted, then it becomes a compiled language with efficient GC.
+    \item Apple initially used Objective-C, an interpreted language which has virtual methods that can surface “method not found” error. Then, Apple replaced that with Swift. However, both Objective-C and Swift use reference-counting for GC.
+    \item Java was initially interpreted, but over time become a compiled language with efficient GC.
     \item Julia was initially developed to replace FORTRAN. However, there is already a solution for that called \verb|numpy| in Python. \verb|numpy| uses efficient FORTRAN under the hood.
 \end{itemize}
 
-The big question is: why people repeat the same mistakes when developing a new programming language? Most people create a new programming language with a specific purpose and hope people will use it, which is an expensive bet. The main reason is the ease of development. Getting something out there soon, then see whether people will use it or not (“Worse is better”).
+Why people repeat the same mistakes when developing new programming languages?
+Most people create a new programming language with a specific purpose and hope people will use it, which is an expensive bet.
+The main reason is the ease of development: to get something usable out quickly, then see whether people will use it or not (“Worse is better”).
 
-Beside that reasoning, the usage of reference-counting in Swift has a specific reasoning. Even though inefficient, reference-counting is entirely local and enable other resources, such as socket or file descriptor, to work well. 
+Reference counting is used in Swift for an additional reason. Though less efficient, reference counting is entirely local and can be used to automatically release other resources than memory, such as sockets or file descriptors.
 
 
 \section{Garbage Collection (GC)}
-As mentioned in the previous lecture, there are two main types of GC: reference-counting and mark-sweep. All those GC mechanism have the same goal, that is to manage the resource efficiently. Consider a simple allocator and collector in the code below:
+As mentioned in the previous lecture, there are two main types of GC: reference-counting and mark-and-sweep. All those GC mechanism have the same goal, that is to manage resources efficiently. Consider a simple allocator and collector in the code below:
 \begin{verbatim}
     int buffer[INFINITY];
     int offset = 0;
@@ -243,13 +247,13 @@ As mentioned in the previous lecture, there are two main types of GC: reference-
     }
 \end{verbatim}
 
-The simple GC above is valid, but inefficient since it never release the previously used memory. Consider the code below that will use O(1000) memory instead of O(1). 
+The simple GC above is valid, but inefficient since it never releases the previously allocated memory. Consider the code below that will use O(1000) memory instead of O(1). 
 \begin{verbatim}
     for (int i=0; i < 1000; i++)
-       var O = new Object();
+       var o = new Object();
 \end{verbatim}
 
-However, the notion "efficient" here is relative. What if the code above only run for 1 second and release all the memory after termination? Therefore, GC is about space-time tradeoffs. We can do GC in every iteration and only use O(1) memory, never do it and use O(1000) memory, or do it for every certain amount of memory allocated.
+However, the notion "efficient" here is relative. What if the code above only ran for 1 second and released all the memory after termination? Therefore, GC is about space-time tradeoffs. We can do GC in every iteration and only use O(1) memory, never do it and use O(1000) memory or, in between these extremes, do it for every certain amount of memory allocated.
 
 \begin{verbatim}
     memory usage:     1  ..............x............. 1,000 
@@ -257,7 +261,7 @@ However, the notion "efficient" here is relative. What if the code above only ru
                   iteration        iteration
 \end{verbatim}
 
-In terms of identifying all unused memory, there are two kind of GC: conservative and precise. A precise GC requires us to precisely differentiate pointer and value. If we can not precisely identify pointer, we can not do compaction and relocation. Generally there are two method to make compaction faster: a mutator which run the compaction and relocation in background, and parallel compaction with multiple threads/processes.
+In terms of identifying all unused memory, there are two kinds of GC: conservative and precise. Precise GC requires us to precisely differentiate pointer and value. If we cannot precisely identify pointers, we can not do compaction and relocation. Generally there are two method to make compaction faster: a mutator which run the compaction and relocation in background, and parallel compaction with multiple threads/processes.
 
 
 In the next lecture, we are going to learn about copying and generational GC.
