--- a/2023/Scribe/2023-02-14/scribe_notes.tex
+++ b/2023/Scribe/2023-02-14/scribe_notes.tex
@@ -112,70 +112,79 @@
 \lecture{3}{Compiler Optimizations}{Feb 14}{Emery Berger}{Walid A. Hanafy}
 
 \section{Register Allocation}
-Register allocation is a key problem in designing compilers. Registers are a limited super fast resources. 
+Register allocation is a key problem in designing compilers.
+Registers are super fast, but are available in limited numbers.
 \subsubsection*{Example:}
 Operations on Registers (A, B) \\
 ADD EAX, EBX, ECX, $C \leftarrow A+B$
 
 
-In the following example, we can see that the limitation of register might affect the performance.
+In the following example, we can see that the limitations of register might affect the performance.
 \begin{lstlisting}[language=c++]
     void do_something(){
-        int a,b,c; \\Can fit in registers
-        float x,y,z; \\Can fit in registers
-        float arr[1024]; \\Cannot fir in registers (may be even cache memory)
+        int a,b,c;       // Can fit in registers
+        float x,y,z;     // Can fit in registers
+        float arr[1024]; // Cannot fit in registers (may be even cache memory)
     }
 \end{lstlisting}
-Registers usally are accessed with ~1~Cycle. However, the L0 Cache require 5--7 Cycles.
-\subsection{Complier Role in Register Allocation}
-Compliers play an important role in Register Allocation optimizations by trying to:
+Registers usally are accessed with ~1~Cycle. In comparison, the L0 Cache require 5--7 Cycles.
+
+\subsection{Compiler Role in Register Allocation}
+Compilers play an important role in register allocation optimizations by trying to:
 \begin{enumerate}
     \item Identify Live Variables. i.e. Identifying the start and the end of each variable usage.
-    \item Maximize number of variables over time
-    \item Minimize ``Spills''. Spills is moving data out of memory.
+    \item Maximize number of variables in registers over time.
+    \item Minimize ``Spills''. Spilling is moving a variable from a register to memory.
 \end{enumerate}
-The Register Allocation problem is reducible to graph coloring. i.e., NP-Complete. However, even if there exist a polynomial time algorithm, the process is still too slow especially for JIT compilers.
+The Register Allocation problem is reducible to graph coloring, so it is NP-Complete. However, even if there exist a polynomial time algorithm, the process is still too slow especially for JIT compilers.
 
 \subsection{Just In Time (JIT) Compilation}
-JIT is a background compilation, on demand, for hot code. JIT uses a compiler and an interpreter. Java used a hot spot JVM method.
+JIT is a background compilation, on demand, for ``hot'' code (code that executes often).
+JIT uses a compiler and an interpreter: code is interpreted until the virtual machine decides it is worthwhile to compile.
 
 
-\fig{1}{0.6}{Type of Compliations}{jit.drawio.png}
+\fig{1}{0.6}{Type of Compilations}{jit.drawio.png}
 
 Checkout: \url{https://accidentallyquadratic.tumblr.com/}
 
 
 \noindent{\bf Solution}
-The register allocation process requires expensive analysis. They very difficult to use in large code bases and for JITs. The solutions usually use greedy heuristics, which often try to reduce register pressure.
+The register allocation process requires expensive analysis. They are very difficult to use in large code bases and for JITs. The solutions usually use greedy heuristics, which often try to reduce \emph{register pressure}.
 
 
 \subsubsection*{Note:}
-Web Assembly: The authors of webassembly tried to solve thread management by didicating a register for thread location data and garpage colection through dedicating a register to the root (Pointer to root). The solution created a register pressure that made webassembly 30\% slower than native.
+Web Assembly: The authors of webassembly tried to solve thread management by dedicating a register for thread location data and garbage colection by dedicating a register to the root (Pointer to root). The solution created a register pressure that made webassembly 30\% slower than native.
 
 
 The following figure explains the mark-sweep GC technique as well as how webassembly utilized the register.
-\fig{2}{0.6}{Reachanbility Analysis}{reachabilityanalysis.drawio.png}
+\fig{2}{0.6}{Reachability Analysis}{reachabilityanalysis.drawio.png}
 
 
 \section{FORTRAN is Alive!}
 \subsubsection*{Note:}
-APL introduced the notations for list comperhension \\
-    arr = [x * x for x in range(100)] \\
-    Created by kenneth iverson in IBM and APL stands for "Array Programming Language"
+APL (``Array Programming Language'') introduced the notation for list comprehension:
+\begin{lstlisting}[language=Python]
+    arr = [x * x for x in range(100)]
+\end{lstlisting}
+Created by Kenneth Iverson at IBM.
 
-FORTRAN is very influential as it allows for automatic parallelization.
-FORTRAN allows parallelizing loops. FORTRAN is used in {\it NUMPY} which depends on BLAS "Basic Linear Algebra Subprograms" and LPACK "Linear Algebra PACKAGE".  
+FORTRAN is very influential as it allows for automatic parallelization, including loops.
+FORTRAN is used in the \texttt{numpy} Python package, which depends on BLAS ``Basic Linear Algebra Subprograms'' and
+LPACK ``Linear Algebra PACKage''.
+
 \subsubsection*{Note:}
-The automatic ability to parallize code in FORTRAN made code written in FORTRAN faster that C. Ex: After translating code from FORTRAN to C using F2C library it became 20-40\% slowdown.  
+The automatic ability to parallize code in FORTRAN made code written in it faster than that written in C.
+For example, after translating code from FORTRAN to C using F2C library it became 20-40\% slower.  
 
-Languages like c/c++ is only able to parallelize code using special constructs and libraries like Multiple Threads, MPI, OpenMP, etc.
+Languages like C/C++ are only able to parallelize code using special constructs and libraries like pthreads, MPI, OpenMP, etc.
 
 \subsection{Why FORTRAN Allows for automatic parallelization?}
 Same argument allows for SQL.
+
 \subsubsection*{Note:}
-What is turing compelete? A language that can be used to program any problem, at least in theory.\\
+What is turing complete? A language that can be used to program any problem, at least in theory.\\
 Non-Turing Complete Languages: SQL, Excel, Datalog, regex, ..\\
-Turing Complete Langues: All general purpose programming languages \\
+Turing Complete Languages: All general purpose programming languages \\
 Most Domain Specific languages are not turing Complete. \\
 Turing Completeness can be achived by simple constructs.\\
 
@@ -186,25 +195,30 @@ If R0 go left, if not R0 go right, If R1 go left, If not R1 go right.
 
 \subsubsection*{Note:}
 Low-level languages are hard to optimize as the intent is not clear.\\
-High-level language are easier to complie as the intent is clear.\\
-Peep hole optimization "Replacing instructions with more efficient instructions", which is the last step in complier optimization applies to both.
+High-level language are easier to compile as the intent is clear.\\
+Peephole optimization "Replacing instructions with more efficient instructions",
+which is the last step in compiler optimization, applies to both.
 
     
-So, back to our question why FORTRAN code can be parallelized? It because it doesn't have pointers which mean no variables could point to the same memory location so no ``race'' conditions happen and the parallel must be equal the sequential. Example codes include:
+So, back to our question why FORTRAN code can be parallelized? Because it doesn't have pointers, which means no variables could point to the same memory location.  Therefore, no ``race'' conditions happen and the parallel must be equal to the sequential.
+Example codes include:
 \begin{lstlisting}[language=c++]
     void matrixvec(float *m, float *v, float *r, int x, int y){
         // A code that does matrix vec multiplication
     }
 \end{lstlisting}
-Although this code is ``Embarrassingly parallel'', speed up is linear with number of added nodes, since loops results are independent. The complier can't fully guess whether there is some dependency or not. The complier can be informed to treat them as independent by using the `restrict' keyword. 
+Although this code is ``Embarrassingly parallel'', speed up is linear with number of added nodes, since loops results are independent. The compiler can't fully guess whether there is some dependency or not. The compiler can be informed to treat them as independent by using the `restrict' keyword. 
 
-Complier usually try to find such cases by disambiguating pointers, pointer analysis, alias analysis, nested loop optimizations, inter-procedural analysis, flow sensitivity, unification, path sensitivity, branch prediction, etc.
+Compiler usually try to find such cases by disambiguating pointers, pointer analysis, alias analysis, nested loop optimizations, inter-procedural analysis, flow sensitivity, unification, path sensitivity, branch prediction, etc.
+
+The situation in which multiple pointers point to the same data is known as \emph{aliasing}. \\
+See: \url{https://en.wikipedia.org/wiki/Aliasing_(computing)}
 
 \subsubsection*{Quote:}
-``Good Ideas might have ramifications" -- A scheme common in our course.
+``Good Ideas might have ramifications" -- A theme common in our course.
 
 \subsubsection*{Note:}
-    Path sensitivity is not scalable and cases $2^n$ explsoin. 
+    Path sensitivity is not scalable and cases $2^n$ explosion. 
     Ex: 
 \begin{lstlisting}[language=c++]
     if ()
@@ -212,23 +226,25 @@ Complier usually try to find such cases by disambiguating pointers, pointer anal
             if()
                 if() 
 \end{lstlisting}
-FORTRAN is a High level language fpr scientists.
+
+FORTRAN is a High level language for scientists.
 \begin{enumerate}
     \item Portable
     \item Readable
     \item Fast
 \end{enumerate}
+
 \section{LISP}
 Symbolic data structures:
 \begin{enumerate}
-    \item Supports list 
+    \item Supports lists
     \item Nested
     \item Heterogenous
 \end{enumerate}
 \begin{lstlisting}[language=lisp]
-    ("Hello" 5 (name "emery" "height" 64)) \\looks like json
+    ("Hello" 5 (name "emery" "height" 64)) // looks like json
 \end{lstlisting}
-LISP supports linked list out of the box. FORTRAN don't support pointers and hence linked list is not supported. The language can be used to implement linked list by using offset list as shown bellow.
+LISP supports linked lists out of the box. FORTRAN doesn't support pointers and hence linked list is not supported. The language can be used to implement linkeds list by using offset list as shown below.
 \fig{3}{0.6}{Offset List}{offsetlist.drawio.png}
 \subsubsection*{Note:}
 LISP was used to build ``SHRDLU'' an NLP and 3D simulator tool.
@@ -246,9 +262,9 @@ RC can leak memory in the case of cycles. In the next example, when X is removed
 \fig{5}{0.6}{Reference Counting Can leak memory}{rc_leak.drawio.png}
 
 \subsection{Mark-Sweep}
-The mark-sweep GC works by reiterating over all allocated memory objects and marking as reachable or not. As shown in figure 3.2.
+The mark-sweep GC works by iterating over all allocated memory objects and marking as reachable or not, as shown in figure 3.2.
 
-Python used Reference Counting and Mark-Sweep.
+Python uses Reference Counting and Mark-Sweep.
 \subsection*{GC languages}
 Java, C\#, GO, Lisp, ruby, DART, Python, Kotlin, TCL, Swift, OCamel, Perl, Modula, ADA.
 \subsection*{Non-GC languages}
